# multicpy

./: CMakeLists.txt  Readme.md  vcpkg.json
src/: address_parser.cpp  address_parser.hpp  file_copier.cpp  file_copier.hpp  hash_verifier.cpp  hash_verifier.hpp  main.cpp  recovery_manager.cpp  recovery_manager.hpp  task_queue.cpp  task_queue.hpp
